# ButtonMash

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  bmash.h  button-mash.cpp
linux/: CMakeLists.txt  main.cpp
